k8s/misskey/app/misskey.yaml
# registry.digitalocean.com/nadena-dev-sgp1/misskey:current
# registry.digitalocean.com/nadena-dev-sgp1/misskey-config:current
---
apiVersion: v1
kind: Service
metadata:
  name: misskey-backend
spec:
  selector:
    app: misskey
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: misskey-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: msky.nadena.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: misskey-backend
                port:
                  number: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: misskey
spec:
  selector:
    matchLabels:
      app: misskey
  replicas: 2
  template:
    metadata:
      labels:
        app: misskey
    spec:
      containers:
      - name: misskey
        image: registry.digitalocean.com/nadena-dev-sgp1/misskey:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2000M"
            cpu: "500m"
          limits:
            memory: "4G"
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /misskey/.config
          name: config
        - mountPath: /misskey/files
          name: files
        startupProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 900
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          failureThreshold: 3
          periodSeconds: 10
      volumes:
      - name: config
        emptyDir: {}
      - name: files
        emptyDir: {}
